<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="330dp"
        android:scaleX="8"
        android:scaleY="8"
        android:text="@string/emojiDisplay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="222dp"
        android:onClick="displayInfo"
        android:text="@string/search_button"
        android:textColor="@color/white"
        android:background="@drawable/gradient_color"
        app:layout_constraintStart_toEndOf="@+id/editTextText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/app_description"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/unicode_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="120dp"
        android:text="@string/unicode"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/html_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="120dp"
        android:text="@string/html_entity"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/copy_button2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageButton
        android:id="@+id/copy_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="123dp"
        android:background="@color/none"
        android:contentDescription="copy to clipboard"
        android:onClick="copyInfo"
        app:layout_constraintStart_toEndOf="@+id/html_code"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="?attr/actionModeCopyDrawable"
        app:tint="@color/red" />

    <ImageButton
        android:id="@+id/copy_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="123dp"
        android:background="@color/none"
        android:contentDescription="copy to clipboard"
        android:onClick="copyInfo"
        app:layout_constraintStart_toEndOf="@+id/unicode_code"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="?attr/actionModeCopyDrawable"
        app:tint="@color/red" />

</androidx.constraintlayout.widget.ConstraintLayout>